--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "swiper": "^11.0.3",
     "vue": "^3.2.16",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.1"
+    "vue-router": "^4.2.1",
+    "vue3-autocounter": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
